--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,9 @@ exports
 *.cache
 build
 .strapi-updater.json
+/config/database.js
+/.strapi
+/.env.dev
+/package-lock.json
+/yarn.lock
+/_yarn.lock
