--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@strapi/plugin-users-permissions": "4.17.1",
     "@strapi/provider-upload-cloudinary": "4.17.1",
     "@strapi/strapi": "4.17.1",
-    "pg": "8.11.3"
+    "pg": "8.11.3",
+    "pg-connection-string": "^2.5.0",
+    "sqlite3": "^5.1.4"
   },
   "author": {
     "name": "A Strapi developer"
